latest update for the ansible infra

--- a/ansible/main-playbook.yml
+++ b/ansible/main-playbook.yml
@@ -2,12 +2,53 @@
 - hosts: web_servers
   become: "true"
   tasks: 
-    - name: update apt-get(yum in centos) repository
-      apt:
-        name: "*"
+    #- name: update apt-get(yum in centos) repository
+    #  apt:
+    #    name: "*"
+    #    update_cache: "yes"
+
+    - name: update repo and Install nginx
+      apt: 
+        name: nginx
+        state: present
         update_cache: "yes"
 
-    - name: Install nginx
-      apt: 
-        name: "nginx"
-        state: present
+    - name: create folder for website
+      file: 
+        path: "/var/www/{{ website_name }}"
+        state: directory 
+
+    - name: delete sites-enabled and sites-available files
+      file: 
+        path: "{{ item }}"
+        state: absent
+      with_items: 
+        - "/etc/nginx/sites-enabled/default"
+        - "/etc/nginx/sites-available/default"
+
+    - name: add webpage to servers
+      copy: 
+        src: "files/index.html"
+        dest: "/var/www/{{ website_name }}/index.html"
+
+    - name: configure nginx with new config file
+      template: 
+        src: "templates/default.tpl" # don't need to specify the location ansible will be able to read folders
+        dest: "/etc/nginx/sites-available/{{ website_name }}"
+
+    - name: Create symlink for config file
+      file: 
+        src: "/etc/nginx/sites-available/{{ website_name }}"
+        dest: "/etc/nginx/sites-enabled/{{ website_name }}"
+        state: link
+
+    - name: Restart nginx 
+      service:
+        name: nginx
+        state: restarted
+
+
+
+
+#for item in my_list_of_items: 
+#  delete(item)
