--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,3 +3,5 @@ host_key_checking = False
 inventory = ./inventory.hosts
 #inventory = hosts.yml
 enable_plugins = yaml, ini
+stdout_callback = debug
+retry_files_enabled = False
